[tool.poetry]
name = "dhos-locations-api"
version = "0.0.1"
description = "Polaris Locations API"
authors = ["Duncan Booth <duncan.booth@sensynehealth.com>"]
keywords = ["Locations", "Polaris"]
repository = "https://github.com/polaris-foundation/polaris-locations-api"

[tool.poetry.dependencies]
python = "^3.9"
draymed = "2.*"
flask-batteries-included = {version = "3.*", extras = ["apispec", "pgsql"]}
she-logging = "1.*"
waitress = "2.*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coloredlogs = "*"
coverage = "*"
isort = "*"
jsonschema = "3.*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = {version = "*", extras=["fbi"]}
pytest-flask = "*"
pytest-freezegun = "*"
pytest-mock = "*"
requests_mock = "1.8.*"
safety = "*"
tox = "*"
types-mock = "*"
types-PyYAML = "*"
types-requests = "*"
sadisplay = "*"
